# ChangeLog for app-office/dia
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.109 2008/12/04 22:08:27 eva Exp $

  04 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org> -dia-0.96.1.ebuild,
  dia-0.96.1-r1.ebuild:
  Add python_need_rebuild, bug #244749.

  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  28 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/dia-0.96.1-64bit-fixes.patch, dia-0.96.1-r1.ebuild:
  add 64 bit compilation fix patch, bug #191673.

  29 May 2008; Ali Polatel <hawking@gentoo.org> dia-0.96.1-r1.ebuild:
  python_mod_optimize is ROOT aware.

  07 May 2008; Markus Rothe <corsair@gentoo.org> dia-0.96.1-r1.ebuild:
  Stable on ppc64; bug #191673

  06 May 2008; Jeroen Roovers <jer@gentoo.org> dia-0.96.1-r1.ebuild:
  Stable for HPPA (bug #191673).

  01 May 2008; Markus Meier <maekke@gentoo.org> dia-0.96.1-r1.ebuild:
  amd64/x86 stable, bug #191673

  01 May 2008; Raúl Porcel <armin76@gentoo.org> dia-0.96.1-r1.ebuild:
  alpha/ia64/sparc stable wrt #191673

  01 May 2008; nixnut <nixnut@gentoo.org> dia-0.96.1-r1.ebuild:
  Stable on ppc wrt bug 191673

*dia-0.96.1-r1 (03 Apr 2008)

  03 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/dia-0.96.1-gnome-doc.patch, +files/dia-0.96.1-xml-fixes.patch,
  +dia-0.96.1-r1.ebuild:
  Remove man generation if USE="-doc", fix bug #205067. Always install
  documentation where gnome can find it. Conditional destination doesn't do
  any good anyway, fix #159381.

  09 Mar 2008; Mart Raudsepp <leio@gentoo.org> dia-0.95.1.ebuild,
  dia-0.96.1.ebuild:
  Fix build with newer intltool, bug 199598

  17 Nov 2007; Gilles Dartiguelongue <eva@gentoo.org> dia-0.96.1.ebuild:
  added conditional doc generation, fix bug #199412

*dia-0.96.1 (10 Apr 2007)

  10 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> -dia-0.96_pre3.ebuild,
  +dia-0.96.1.ebuild: