@@ -3,7 +3,9 @@ AUX dia-0.96.1-gnome-doc.patch 3322 RMD160 50ec2d4c14a267ab350d5dcdf95ae93a68f17
 AUX dia-0.96.1-xml-fixes.patch 1064 RMD160 2e3e15a605a76ac87458af4c81380ae2c1c0f863 SHA1 5b93651e9c898a3be1fc84090c4331def8f69207 SHA256 b128d7aada1c8c050a30389ff79e9e70dc444e1fb7c2428974324ec65570e1e9
 DIST dia-0.95-1.tar.bz2 4203188 RMD160 680102d2da144c1a720a61e5b85c030f353000cc SHA1 887482cd25735ede7465302cb10b8c3efdc1da15 SHA256 809d00268b6f6ab02fb666c70ba0b8f556d258825e004ab4386103bcac4b7bc5
 DIST dia-0.96.1.tar.bz2 4445553 RMD160 aef7b2227be2fb7eb5bdd31536790e868af74311 SHA1 e3d8f16f50dbbd03c1ce0235dba28c3e9612bb6e SHA256 7bb43d8b0cb287d728ea479fb65d1b57b8530af773018214e7f312dceed34237
+DIST dia-0.97.tar.bz2 6736670 RMD160 1b2869e2ebdd2f37b908ab3166e529aec1862af6 SHA1 1c5a727e9e4f59b823a4616fc881055006eb8b96 SHA256 9083382bd5435b6d6324fc601f359a7c759504e48adbcece0a7d5c45a76ccf5a
 EBUILD dia-0.95.1.ebuild 1694 RMD160 e41db2f9a99c8aec54cd04df8eaefe229e5b9a20 SHA1 5ab6e5b213f55810011ae2a9a379590d6294aaf7 SHA256 4bdfdfcb24d23858a9a48c56bdbf2977b6a999f912c3affebe254f83ff3f6ae6
 EBUILD dia-0.96.1-r1.ebuild 2638 RMD160 e85c51c220ed923e1488ddb5b68243efa44ed471 SHA1 4bc1b2aa31c2539b6c7b3aef9b0deba0c2ce6449 SHA256 8480c5be0474d0197b7dab8ffad940e3db0bb87ce6aa57c2940ad1c36c71448d
-MISC ChangeLog 13980 RMD160 74141947ea02bfd8af95f74f0a5040884afeb1f4 SHA1 10d7b084937b37f62b26eb29aca30b3a20db6ba3 SHA256 bcaa95e461bf34bee2cfcf2b70c4e379e725cf5e6f48685c4d00f2a1aaf0e0d2
+EBUILD dia-0.97.ebuild 2406 RMD160 d19008193bddcedb9f43b1b53356c0d90df59026 SHA1 76a0ce1d1b8c89d302e2552a402acb51822984fc SHA256 f497e77410cceb195ec327782b5500444531862959e9e21c9bf75b3304276620
+MISC ChangeLog 14195 RMD160 80941ce1896fa71f3db320b600f28a96f70c25fd SHA1 f9370e2ae8308f3541649971089abd879a1ca932 SHA256 ce3a9925aab5450eefb22690c3b3e930443d8892ce9dc75911d6c7f2152e5a63
 MISC metadata.xml 687 RMD160 061a68c1fb154961a49f0e477c60e5622203ee9c SHA1 04993b30fa3d405bb573fb1590063b7300b2bbfe SHA256 bdcc845e385aea41bab345156554851037e00f1d268801d05e922f375ab97145
